--- a/servercore/pom.xml
+++ b/servercore/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ServerCore</artifactId>
+    <artifactId>servercore</artifactId>
 
     <properties>
         <maven.compiler.source>15</maven.compiler.source>
