--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>servercore</module>
         <module>client</module>
+        <module>database</module>
     </modules>
 
 
